Closed
Bug 426721
Opened 18 years ago
Closed 18 years ago
Transforming the ancestors of a foreignObject does not cause a refresh
Categories
(Core :: SVG, defect)
Core
SVG
Tracking
()
RESOLVED
FIXED
People
(Reporter: markusmobius, Assigned: longsonr)
References
()
Details
Attachments
(1 file, 1 obsolete file)
|
1.43 KB,
patch
|
roc
:
review+
roc
:
superreview+
damons
:
approval1.9+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9b4) Gecko/2008030714 Firefox/3.0b4
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9b4) Gecko/2008030714 Firefox/3.0b4
Login to above URL - use the username "readinggroup" and same password. You will see a data entry web program that makes extensive use of SVG foreignobject and general SVG improvements in FF3. The code worked perfectly in FF3 Beta 1 to 4. In Beta 5 the page becomes very slow and no longer renders correctly.
Examples:
* R and C keys should rotate the image - this works in Beta 4 but not Beta 5.
* Press Page Up twice to go to next census image - a warning page appears - but afterwards the underlying image is rendered incorrectly.
* When you scroll the image using the A and Z keys there are parts of the image that are not scrolled.
Reproducible: Always
Steps to Reproduce:
1.Login to above URL - use the username "readinggroup" and same password.
2.R and C keys should rotate the image - this works in Beta 4 but not Beta 5.
3.Press Page Up twice to go to next census image - a warning page appears - but afterwards the underlying image is rendered incorrectly.
Actual Results:
Program works in Beta 1 to Beta 4 but not Beta 5 on Windows Vista.
| Assignee | ||
Updated•18 years ago
|
Component: General → SVG
Product: Firefox → Core
QA Contact: general → general
| Assignee | ||
Updated•18 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
| Assignee | ||
Comment 1•18 years ago
|
||
I removed the reflow = PR_TRUE line which was a little too aggressive. We need the UpdateGraphic call.
Assignee: nobody → longsonr
Status: NEW → ASSIGNED
Attachment #313323 -
Flags: superreview?(roc)
Attachment #313323 -
Flags: review?(roc)
| Assignee | ||
Comment 2•18 years ago
|
||
right file this time.
Attachment #313323 -
Attachment is obsolete: true
Attachment #313324 -
Flags: superreview?(roc)
Attachment #313324 -
Flags: review?(roc)
Attachment #313323 -
Flags: superreview?(roc)
Attachment #313323 -
Flags: review?(roc)
| Assignee | ||
Updated•18 years ago
|
OS: Windows Vista → All
Hardware: PC → All
Summary: SVG code in FF3 Beta 5 broken (works in Beta 4) → Transforming the ancestors of a foreignObject does not cause a refresh
Version: unspecified → Trunk
Attachment #313324 -
Flags: superreview?(roc)
Attachment #313324 -
Flags: superreview+
Attachment #313324 -
Flags: review?(roc)
Attachment #313324 -
Flags: review+
| Assignee | ||
Comment 3•18 years ago
|
||
Comment on attachment 313324 [details] [diff] [review]
patch
Very low risk as previous betas of firefox 3 used to call UpdateGraphic at this point. I've checked that the infinite loop testcases that prompted the original change are still OK.
Attachment #313324 -
Flags: approval1.9?
Comment 4•18 years ago
|
||
Robert, thanks for indicating risk and confirming tests pass.
Comment 5•18 years ago
|
||
Comment on attachment 313324 [details] [diff] [review]
patch
a1.9+=damons
Attachment #313324 -
Flags: approval1.9? → approval1.9+
Updated•18 years ago
|
Flags: wanted1.9+
| Assignee | ||
Comment 6•18 years ago
|
||
checked in,
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•