Bug 426721 - Transforming the ancestors of a foreignObject does not cause a refresh. r+sr=roc,a1.9=dsicore